task3/bin/y.output
   0  $accept : s $end

   1  s : global

   2  global : procedures procMain
   3         | procMain

   4  procedures : procedures proc
   5             | proc

   6  proc : procValue
   7       | procVoid

   8  procMain : VOID MAIN LEFTPAREN RIGHTPAREN block_return_void_statements

   9  procVoid : procIDVoid LEFTPAREN params RIGHTPAREN block_return_void_statements

  10  procValue : procIDValue LEFTPAREN params RIGHTPAREN block_return_value_statements

  11  procIDValue : varType id

  12  procIDVoid : void id

  13  params :
  14         | paramsDeclare

  15  paramsDeclare : param COMMA paramsDeclare
  16                | param

  17  param : varType id

  18  operator : operator PLUS operator
  19           | operator MINUS operator
  20           | operator MULTI operator
  21           | operator DIVISION operator
  22           | Pexpr PLUS Pexpr
  23           | Pexpr MINUS Pexpr
  24           | Pexpr MULTI Pexpr
  25           | Pexpr DIVISION Pexpr
  26           | operator PLUS Pexpr
  27           | operator MINUS Pexpr
  28           | operator MULTI Pexpr
  29           | operator DIVISION Pexpr
  30           | Pexpr PLUS operator
  31           | Pexpr MINUS operator
  32           | Pexpr MULTI operator
  33           | Pexpr DIVISION operator
  34           | address
  35           | derefID
  36           | consts

  37  compBoolExpr : operator
  38               | compBoolExpr EQUAL compBoolExpr
  39               | compBoolExpr GREATER compBoolExpr
  40               | compBoolExpr GREATEREQUAL compBoolExpr
  41               | compBoolExpr LESS compBoolExpr
  42               | compBoolExpr LESSEQUAL compBoolExpr
  43               | compBoolExpr NOTEQUAL compBoolExpr

  44  expr : expr AND expr
  45       | expr OR expr
  46       | NOT expr
  47       | compBoolExpr
  48       | Pexpr

  49  Pexpr : LEFTPAREN expr rightParen

  50  rightParen : RIGHTPAREN

  51  block_return_value_statements : LEFTBRACE newline return SEMICOLON rightbrace
  52                                | LEFTBRACE return SEMICOLON rightbrace

  53  block_return_void_statements : emptyBlock
  54                               | LEFTBRACE newline RETURN SEMICOLON rightbrace
  55                               | LEFTBRACE newline rightbrace

  56  return : RETURN expr
  57         | RETURN

  58  emptyBlock : LEFTBRACE rightbrace
  59             | LEFTBRACE RETURN SEMICOLON rightbrace

  60  rightbrace : RIGHTBRACE

  61  consts : id
  62         | numbers
  63         | booleans
  64         | csnull
  65         | strings
  66         | chars
  67         | procCall
  68         | absolute
  69         | stringArray

  70  absolute : ABSOLUTE id ABSOLUTE

  71  id : ID

  72  numbers : INTEGER_NEG
  73          | INTEGER_POS
  74          | HEX_CONST
  75          | OCTAL_CONST
  76          | BINARY_CONST

  77  csnull : CSNULL

  78  booleans : BOOLTRUE
  79           | BOOLFALSE

  80  strings : STRING_CONST

  81  chars : CHAR_CONST

  82  procCall : id LEFTPAREN args RIGHTPAREN

  83  args : argsDeclare

  84  argsDeclare : expr COMMA argsDeclare
  85              | expr

  86  stringArray : id LEFTBRACKET numbers RIGHTBRACKET
  87              | id LEFTBRACKET id RIGHTBRACKET

  88  address : ADDRESS id

  89  derefID : DEREFERENCE id

  90  newline : declarations newline
  91          | SEMICOLON
  92          | statements
  93          | declarations

  94  declarations : variable_declare_statements SEMICOLON

  95  statements : statement statements
  96             | statement
  97             | block_statements statements
  98             | block_statements

  99  statement : IF_statements
 100            | LOOP_statements
 101            | proc
 102            | procCall SEMICOLON
 103            | ASSIGNMENT_statement SEMICOLON

 104  statements_type : statement
 105                  | block_statements

 106  block_statements : emptyBlock
 107                   | LEFTBRACE newline rightbrace

 108  IF_statements : IF cond statements_type
 109                | IF cond statements_type else

 110  else : ELSE statements_type

 111  LOOP_statements : while
 112                  | whileDO
 113                  | for

 114  while : WHILE cond statements_type

 115  whileDO : DO statements_type WHILE cond

 116  for : FOR for_cond rightParen statements_type

 117  for_cond : LEFTPAREN preCondition SEMICOLON postCondition SEMICOLON iteration

 118  preCondition :
 119               | ASSIGNMENT_statement

 120  postCondition :
 121                | expr

 122  iteration :
 123            | ASSIGNMENT_statement

 124  cond : LEFTPAREN expr rightParen

 125  ASSIGNMENT_statement : id ASSIGNMENT expr
 126                       | derefID ASSIGNMENT expr

 127  str_ASSIGNMENT_statement : id LEFTBRACKET numbers RIGHTBRACKET ASSIGNMENT strings

 128  varType : BOOL
 129          | CHAR
 130          | INT
 131          | STRING
 132          | INTPTR
 133          | CHARPTR

 134  void : VOID

 135  StringDeclare : id LEFTBRACKET numbers RIGHTBRACKET COMMA StringDeclare
 136                | str_ASSIGNMENT_statement COMMA StringDeclare
 137                | id LEFTBRACKET numbers RIGHTBRACKET
 138                | str_ASSIGNMENT_statement

 139  variablesDeclare : id COMMA variablesDeclare
 140                   | ASSIGNMENT_statement COMMA variablesDeclare
 141                   | id
 142                   | ASSIGNMENT_statement

 143  variable_declare_statements : varType variablesDeclare
 144                              | varType StringDeclare

state 0
	$accept : . s $end  (0)

	BOOL  shift 1
	CHAR  shift 2
	INT  shift 3
	STRING  shift 4
	INTPTR  shift 5
	CHARPTR  shift 6
	VOID  shift 7
	.  error

	s  goto 8
	global  goto 9
	procedures  goto 10
	procMain  goto 11
	proc  goto 12
	procValue  goto 13
	procVoid  goto 14
	procIDVoid  goto 15
	procIDValue  goto 16
	varType  goto 17
	void  goto 18


state 1
	varType : BOOL .  (128)

	.  reduce 128


state 2
	varType : CHAR .  (129)

	.  reduce 129


state 3
	varType : INT .  (130)

	.  reduce 130


state 4
	varType : STRING .  (131)

	.  reduce 131


state 5
	varType : INTPTR .  (132)

	.  reduce 132


state 6
	varType : CHARPTR .  (133)

	.  reduce 133


state 7
	procMain : VOID . MAIN LEFTPAREN RIGHTPAREN block_return_void_statements  (8)
	void : VOID .  (134)

	MAIN  shift 19
	ID  reduce 134


state 8
	$accept : s . $end  (0)

	$end  accept


state 9
	s : global .  (1)

	.  reduce 1


state 10
	global : procedures . procMain  (2)
	procedures : procedures . proc  (4)

	BOOL  shift 1
	CHAR  shift 2
	INT  shift 3
	STRING  shift 4
	INTPTR  shift 5
	CHARPTR  shift 6
	VOID  shift 7
	.  error

	procMain  goto 20
	proc  goto 21
	procValue  goto 13
	procVoid  goto 14
	procIDVoid  goto 15
	procIDValue  goto 16
	varType  goto 17
	void  goto 18


state 11
	global : procMain .  (3)

	.  reduce 3


state 12
	procedures : proc .  (5)

	.  reduce 5


state 13
	proc : procValue .  (6)

	.  reduce 6


state 14
	proc : procVoid .  (7)

	.  reduce 7


state 15
	procVoid : procIDVoid . LEFTPAREN params RIGHTPAREN block_return_void_statements  (9)

	LEFTPAREN  shift 22
	.  error


state 16
	procValue : procIDValue . LEFTPAREN params RIGHTPAREN block_return_value_statements  (10)

	LEFTPAREN  shift 23
	.  error


state 17
	procIDValue : varType . id  (11)

	ID  shift 24
	.  error

	id  goto 25


state 18
	procIDVoid : void . id  (12)

	ID  shift 24
	.  error

	id  goto 26


state 19
	procMain : VOID MAIN . LEFTPAREN RIGHTPAREN block_return_void_statements  (8)

	LEFTPAREN  shift 27
	.  error


state 20
	global : procedures procMain .  (2)

	.  reduce 2


state 21
	procedures : procedures proc .  (4)

	.  reduce 4


state 22
	procVoid : procIDVoid LEFTPAREN . params RIGHTPAREN block_return_void_statements  (9)
	params : .  (13)

	BOOL  shift 1
	CHAR  shift 2
	INT  shift 3
	STRING  shift 4
	INTPTR  shift 5
	CHARPTR  shift 6
	RIGHTPAREN  reduce 13

	params  goto 28
	varType  goto 29
	paramsDeclare  goto 30
	param  goto 31


state 23
	procValue : procIDValue LEFTPAREN . params RIGHTPAREN block_return_value_statements  (10)
	params : .  (13)

	BOOL  shift 1
	CHAR  shift 2
	INT  shift 3
	STRING  shift 4
	INTPTR  shift 5
	CHARPTR  shift 6
	RIGHTPAREN  reduce 13

	params  goto 32
	varType  goto 29
	paramsDeclare  goto 30
	param  goto 31


state 24
	id : ID .  (71)

	.  reduce 71


state 25
	procIDValue : varType id .  (11)

	.  reduce 11


state 26
	procIDVoid : void id .  (12)

	.  reduce 12


state 27
	procMain : VOID MAIN LEFTPAREN . RIGHTPAREN block_return_void_statements  (8)

	RIGHTPAREN  shift 33
	.  error


state 28
	procVoid : procIDVoid LEFTPAREN params . RIGHTPAREN block_return_void_statements  (9)

	RIGHTPAREN  shift 34
	.  error


state 29
	param : varType . id  (17)

	ID  shift 24
	.  error

	id  goto 35


state 30
	params : paramsDeclare .  (14)

	.  reduce 14


state 31
	paramsDeclare : param . COMMA paramsDeclare  (15)
	paramsDeclare : param .  (16)

	COMMA  shift 36
	RIGHTPAREN  reduce 16


state 32
	procValue : procIDValue LEFTPAREN params . RIGHTPAREN block_return_value_statements  (10)

	RIGHTPAREN  shift 37
	.  error


state 33
	procMain : VOID MAIN LEFTPAREN RIGHTPAREN . block_return_void_statements  (8)

	LEFTBRACE  shift 38
	.  error

	block_return_void_statements  goto 39
	emptyBlock  goto 40


state 34
	procVoid : procIDVoid LEFTPAREN params RIGHTPAREN . block_return_void_statements  (9)

	LEFTBRACE  shift 38
	.  error

	block_return_void_statements  goto 41
	emptyBlock  goto 40


state 35
	param : varType id .  (17)

	.  reduce 17


state 36
	paramsDeclare : param COMMA . paramsDeclare  (15)

	BOOL  shift 1
	CHAR  shift 2
	INT  shift 3
	STRING  shift 4
	INTPTR  shift 5
	CHARPTR  shift 6
	.  error

	varType  goto 29
	paramsDeclare  goto 42
	param  goto 31


state 37
	procValue : procIDValue LEFTPAREN params RIGHTPAREN . block_return_value_statements  (10)

	LEFTBRACE  shift 43
	.  error

	block_return_value_statements  goto 44


state 38
	block_return_void_statements : LEFTBRACE . newline RETURN SEMICOLON rightbrace  (54)
	block_return_void_statements : LEFTBRACE . newline rightbrace  (55)
	emptyBlock : LEFTBRACE . rightbrace  (58)
	emptyBlock : LEFTBRACE . RETURN SEMICOLON rightbrace  (59)

	BOOL  shift 1
	CHAR  shift 2
	INT  shift 3
	STRING  shift 4
	INTPTR  shift 5
	CHARPTR  shift 6
	ID  shift 24
	VOID  shift 45
	IF  shift 46
	WHILE  shift 47
	FOR  shift 48
	DO  shift 49
	RETURN  shift 50
	DEREFERENCE  shift 51
	SEMICOLON  shift 52
	LEFTBRACE  shift 53
	RIGHTBRACE  shift 54
	.  error

	proc  goto 55
	procValue  goto 13
	procVoid  goto 14
	procIDVoid  goto 15
	procIDValue  goto 16
	varType  goto 56
	id  goto 57
	void  goto 18
	derefID  goto 58
	newline  goto 59
	rightbrace  goto 60
	emptyBlock  goto 61
	procCall  goto 62
	declarations  goto 63
	statements  goto 64
	variable_declare_statements  goto 65
	statement  goto 66
	block_statements  goto 67
	IF_statements  goto 68
	LOOP_statements  goto 69
	ASSIGNMENT_statement  goto 70
	while  goto 71
	whileDO  goto 72
	for  goto 73


state 39
	procMain : VOID MAIN LEFTPAREN RIGHTPAREN block_return_void_statements .  (8)

	.  reduce 8


state 40
	block_return_void_statements : emptyBlock .  (53)

	.  reduce 53


state 41
	procVoid : procIDVoid LEFTPAREN params RIGHTPAREN block_return_void_statements .  (9)

	.  reduce 9


state 42
	paramsDeclare : param COMMA paramsDeclare .  (15)

	.  reduce 15


state 43
	block_return_value_statements : LEFTBRACE . newline return SEMICOLON rightbrace  (51)
	block_return_value_statements : LEFTBRACE . return SEMICOLON rightbrace  (52)

	BOOL  shift 1
	CHAR  shift 2
	INT  shift 3
	STRING  shift 4
	INTPTR  shift 5
	CHARPTR  shift 6
	ID  shift 24
	VOID  shift 45
	IF  shift 46
	WHILE  shift 47
	FOR  shift 48
	DO  shift 49
	RETURN  shift 74
	DEREFERENCE  shift 51
	SEMICOLON  shift 52
	LEFTBRACE  shift 53
	.  error

	proc  goto 55
	procValue  goto 13
	procVoid  goto 14
	procIDVoid  goto 15
	procIDValue  goto 16
	varType  goto 56
	id  goto 57
	void  goto 18
	derefID  goto 58
	newline  goto 75
	return  goto 76
	emptyBlock  goto 61
	procCall  goto 62
	declarations  goto 63
	statements  goto 64
	variable_declare_statements  goto 65
	statement  goto 66
	block_statements  goto 67
	IF_statements  goto 68
	LOOP_statements  goto 69
	ASSIGNMENT_statement  goto 70
	while  goto 71
	whileDO  goto 72
	for  goto 73


state 44
	procValue : procIDValue LEFTPAREN params RIGHTPAREN block_return_value_statements .  (10)

	.  reduce 10


state 45
	void : VOID .  (134)

	.  reduce 134


state 46
	IF_statements : IF . cond statements_type  (108)
	IF_statements : IF . cond statements_type else  (109)

	LEFTPAREN  shift 77
	.  error

	cond  goto 78


state 47
	while : WHILE . cond statements_type  (114)

	LEFTPAREN  shift 77
	.  error

	cond  goto 79


state 48
	for : FOR . for_cond rightParen statements_type  (116)

	LEFTPAREN  shift 80
	.  error

	for_cond  goto 81


state 49
	whileDO : DO . statements_type WHILE cond  (115)

	BOOL  shift 1
	CHAR  shift 2
	INT  shift 3
	STRING  shift 4
	INTPTR  shift 5
	CHARPTR  shift 6
	ID  shift 24
	VOID  shift 45
	IF  shift 46
	WHILE  shift 47
	FOR  shift 48
	DO  shift 49
	DEREFERENCE  shift 51
	LEFTBRACE  shift 53
	.  error

	proc  goto 55
	procValue  goto 13
	procVoid  goto 14
	procIDVoid  goto 15
	procIDValue  goto 16
	varType  goto 17
	id  goto 57
	void  goto 18
	derefID  goto 58
	emptyBlock  goto 61
	procCall  goto 62
	statement  goto 82
	block_statements  goto 83
	IF_statements  goto 68
	LOOP_statements  goto 69
	ASSIGNMENT_statement  goto 70
	statements_type  goto 84
	while  goto 71
	whileDO  goto 72
	for  goto 73


state 50
	emptyBlock : LEFTBRACE RETURN . SEMICOLON rightbrace  (59)

	SEMICOLON  shift 85
	.  error


state 51
	derefID : DEREFERENCE . id  (89)

	ID  shift 24
	.  error

	id  goto 86


state 52
	newline : SEMICOLON .  (91)

	.  reduce 91


state 53
	emptyBlock : LEFTBRACE . rightbrace  (58)
	emptyBlock : LEFTBRACE . RETURN SEMICOLON rightbrace  (59)
	block_statements : LEFTBRACE . newline rightbrace  (107)

	BOOL  shift 1
	CHAR  shift 2
	INT  shift 3
	STRING  shift 4
	INTPTR  shift 5
	CHARPTR  shift 6
	ID  shift 24
	VOID  shift 45
	IF  shift 46
	WHILE  shift 47
	FOR  shift 48
	DO  shift 49
	RETURN  shift 50
	DEREFERENCE  shift 51
	SEMICOLON  shift 52
	LEFTBRACE  shift 53
	RIGHTBRACE  shift 54
	.  error

	proc  goto 55
	procValue  goto 13
	procVoid  goto 14
	procIDVoid  goto 15
	procIDValue  goto 16
	varType  goto 56
	id  goto 57
	void  goto 18
	derefID  goto 58
	newline  goto 87
	rightbrace  goto 60
	emptyBlock  goto 61
	procCall  goto 62
	declarations  goto 63
	statements  goto 64
	variable_declare_statements  goto 65
	statement  goto 66
	block_statements  goto 67
	IF_statements  goto 68
	LOOP_statements  goto 69
	ASSIGNMENT_statement  goto 70
	while  goto 71
	whileDO  goto 72
	for  goto 73


state 54
	rightbrace : RIGHTBRACE .  (60)

	.  reduce 60


state 55
	statement : proc .  (101)

	.  reduce 101


state 56
	procIDValue : varType . id  (11)
	variable_declare_statements : varType . variablesDeclare  (143)
	variable_declare_statements : varType . StringDeclare  (144)

	ID  shift 24
	DEREFERENCE  shift 51
	.  error

	id  goto 88
	derefID  goto 58
	ASSIGNMENT_statement  goto 89
	str_ASSIGNMENT_statement  goto 90
	StringDeclare  goto 91
	variablesDeclare  goto 92


state 57
	procCall : id . LEFTPAREN args RIGHTPAREN  (82)
	ASSIGNMENT_statement : id . ASSIGNMENT expr  (125)

	ASSIGNMENT  shift 93
	LEFTPAREN  shift 94
	.  error


state 58
	ASSIGNMENT_statement : derefID . ASSIGNMENT expr  (126)

	ASSIGNMENT  shift 95
	.  error


state 59
	block_return_void_statements : LEFTBRACE newline . RETURN SEMICOLON rightbrace  (54)
	block_return_void_statements : LEFTBRACE newline . rightbrace  (55)

	RETURN  shift 96
	RIGHTBRACE  shift 54
	.  error

	rightbrace  goto 97


state 60
	emptyBlock : LEFTBRACE rightbrace .  (58)

	.  reduce 58


state 61
	block_statements : emptyBlock .  (106)

	.  reduce 106


state 62
	statement : procCall . SEMICOLON  (102)

	SEMICOLON  shift 98
	.  error


state 63
	newline : declarations . newline  (90)
	newline : declarations .  (93)

	BOOL  shift 1
	CHAR  shift 2
	INT  shift 3
	STRING  shift 4
	INTPTR  shift 5
	CHARPTR  shift 6
	ID  shift 24
	VOID  shift 45
	IF  shift 46
	WHILE  shift 47
	FOR  shift 48
	DO  shift 49
	DEREFERENCE  shift 51
	SEMICOLON  shift 52
	LEFTBRACE  shift 53
	RETURN  reduce 93
	RIGHTBRACE  reduce 93

	proc  goto 55
	procValue  goto 13
	procVoid  goto 14
	procIDVoid  goto 15
	procIDValue  goto 16
	varType  goto 56
	id  goto 57
	void  goto 18
	derefID  goto 58
	newline  goto 99
	emptyBlock  goto 61
	procCall  goto 62
	declarations  goto 63
	statements  goto 64
	variable_declare_statements  goto 65
	statement  goto 66
	block_statements  goto 67
	IF_statements  goto 68
	LOOP_statements  goto 69
	ASSIGNMENT_statement  goto 70
	while  goto 71
	whileDO  goto 72
	for  goto 73


state 64
	newline : statements .  (92)

	.  reduce 92


state 65
	declarations : variable_declare_statements . SEMICOLON  (94)

	SEMICOLON  shift 100
	.  error


state 66
	statements : statement . statements  (95)
	statements : statement .  (96)

	BOOL  shift 1
	CHAR  shift 2
	INT  shift 3
	STRING  shift 4
	INTPTR  shift 5
	CHARPTR  shift 6
	ID  shift 24
	VOID  shift 45
	IF  shift 46
	WHILE  shift 47
	FOR  shift 48
	DO  shift 49
	DEREFERENCE  shift 51
	LEFTBRACE  shift 53
	RETURN  reduce 96
	RIGHTBRACE  reduce 96

	proc  goto 55
	procValue  goto 13
	procVoid  goto 14
	procIDVoid  goto 15
	procIDValue  goto 16
	varType  goto 17
	id  goto 57
	void  goto 18
	derefID  goto 58
	emptyBlock  goto 61
	procCall  goto 62
	statements  goto 101
	statement  goto 66
	block_statements  goto 67
	IF_statements  goto 68
	LOOP_statements  goto 69
	ASSIGNMENT_statement  goto 70
	while  goto 71
	whileDO  goto 72
	for  goto 73


state 67
	statements : block_statements . statements  (97)
	statements : block_statements .  (98)

	BOOL  shift 1
	CHAR  shift 2
	INT  shift 3
	STRING  shift 4
	INTPTR  shift 5
	CHARPTR  shift 6
	ID  shift 24
	VOID  shift 45
	IF  shift 46
	WHILE  shift 47
	FOR  shift 48
	DO  shift 49
	DEREFERENCE  shift 51
	LEFTBRACE  shift 53
	RETURN  reduce 98
	RIGHTBRACE  reduce 98

	proc  goto 55
	procValue  goto 13
	procVoid  goto 14
	procIDVoid  goto 15
	procIDValue  goto 16
	varType  goto 17
	id  goto 57
	void  goto 18
	derefID  goto 58
	emptyBlock  goto 61
	procCall  goto 62
	statements  goto 102
	statement  goto 66
	block_statements  goto 67
	IF_statements  goto 68
	LOOP_statements  goto 69
	ASSIGNMENT_statement  goto 70
	while  goto 71
	whileDO  goto 72
	for  goto 73


state 68
	statement : IF_statements .  (99)

	.  reduce 99


state 69
	statement : LOOP_statements .  (100)

	.  reduce 100


state 70
	statement : ASSIGNMENT_statement . SEMICOLON  (103)

	SEMICOLON  shift 103
	.  error


state 71
	LOOP_statements : while .  (111)

	.  reduce 111


state 72
	LOOP_statements : whileDO .  (112)

	.  reduce 112


state 73
	LOOP_statements : for .  (113)

	.  reduce 113


state 74
	return : RETURN . expr  (56)
	return : RETURN .  (57)

	ID  shift 24
	BOOLTRUE  shift 104
	BOOLFALSE  shift 105
	CSNULL  shift 106
	INTEGER_POS  shift 107
	INTEGER_NEG  shift 108
	CHAR_CONST  shift 109
	STRING_CONST  shift 110
	HEX_CONST  shift 111
	OCTAL_CONST  shift 112
	BINARY_CONST  shift 113
	NOT  shift 114
	ADDRESS  shift 115
	DEREFERENCE  shift 51
	ABSOLUTE  shift 116
	LEFTPAREN  shift 117
	SEMICOLON  reduce 57

	id  goto 118
	operator  goto 119
	Pexpr  goto 120
	address  goto 121
	derefID  goto 122
	consts  goto 123
	compBoolExpr  goto 124
	expr  goto 125
	numbers  goto 126
	booleans  goto 127
	csnull  goto 128
	strings  goto 129
	chars  goto 130
	procCall  goto 131
	absolute  goto 132
	stringArray  goto 133


state 75
	block_return_value_statements : LEFTBRACE newline . return SEMICOLON rightbrace  (51)

	RETURN  shift 74
	.  error

	return  goto 134


state 76
	block_return_value_statements : LEFTBRACE return . SEMICOLON rightbrace  (52)

	SEMICOLON  shift 135
	.  error


state 77
	cond : LEFTPAREN . expr rightParen  (124)

	ID  shift 24
	BOOLTRUE  shift 104
	BOOLFALSE  shift 105
	CSNULL  shift 106
	INTEGER_POS  shift 107
	INTEGER_NEG  shift 108
	CHAR_CONST  shift 109
	STRING_CONST  shift 110
	HEX_CONST  shift 111
	OCTAL_CONST  shift 112
	BINARY_CONST  shift 113
	NOT  shift 114
	ADDRESS  shift 115
	DEREFERENCE  shift 51
	ABSOLUTE  shift 116
	LEFTPAREN  shift 117
	.  error

	id  goto 118
	operator  goto 119
	Pexpr  goto 120
	address  goto 121
	derefID  goto 122
	consts  goto 123
	compBoolExpr  goto 124
	expr  goto 136
	numbers  goto 126
	booleans  goto 127
	csnull  goto 128
	strings  goto 129
	chars  goto 130
	procCall  goto 131
	absolute  goto 132
	stringArray  goto 133


state 78
	IF_statements : IF cond . statements_type  (108)
	IF_statements : IF cond . statements_type else  (109)

	BOOL  shift 1
	CHAR  shift 2
	INT  shift 3
	STRING  shift 4
	INTPTR  shift 5
	CHARPTR  shift 6
	ID  shift 24
	VOID  shift 45
	IF  shift 46
	WHILE  shift 47
	FOR  shift 48
	DO  shift 49
	DEREFERENCE  shift 51
	LEFTBRACE  shift 53
	.  error

	proc  goto 55
	procValue  goto 13
	procVoid  goto 14
	procIDVoid  goto 15
	procIDValue  goto 16
	varType  goto 17
	id  goto 57
	void  goto 18
	derefID  goto 58
	emptyBlock  goto 61
	procCall  goto 62
	statement  goto 82
	block_statements  goto 83
	IF_statements  goto 68
	LOOP_statements  goto 69
	ASSIGNMENT_statement  goto 70
	statements_type  goto 137
	while  goto 71
	whileDO  goto 72
	for  goto 73


state 79
	while : WHILE cond . statements_type  (114)

	BOOL  shift 1
	CHAR  shift 2
	INT  shift 3
	STRING  shift 4
	INTPTR  shift 5
	CHARPTR  shift 6
	ID  shift 24
	VOID  shift 45
	IF  shift 46
	WHILE  shift 47
	FOR  shift 48
	DO  shift 49
	DEREFERENCE  shift 51
	LEFTBRACE  shift 53
	.  error

	proc  goto 55
	procValue  goto 13
	procVoid  goto 14
	procIDVoid  goto 15
	procIDValue  goto 16
	varType  goto 17
	id  goto 57
	void  goto 18
	derefID  goto 58
	emptyBlock  goto 61
	procCall  goto 62
	statement  goto 82
	block_statements  goto 83
	IF_statements  goto 68
	LOOP_statements  goto 69
	ASSIGNMENT_statement  goto 70
	statements_type  goto 138
	while  goto 71
	whileDO  goto 72
	for  goto 73


state 80
	for_cond : LEFTPAREN . preCondition SEMICOLON postCondition SEMICOLON iteration  (117)
	preCondition : .  (118)

	ID  shift 24
	DEREFERENCE  shift 51
	SEMICOLON  reduce 118

	id  goto 139
	derefID  goto 58
	ASSIGNMENT_statement  goto 140
	preCondition  goto 141


state 81
	for : FOR for_cond . rightParen statements_type  (116)

	RIGHTPAREN  shift 142
	.  error

	rightParen  goto 143


state 82
	statements_type : statement .  (104)

	.  reduce 104


state 83
	statements_type : block_statements .  (105)

	.  reduce 105


state 84
	whileDO : DO statements_type . WHILE cond  (115)

	WHILE  shift 144
	.  error


state 85
	emptyBlock : LEFTBRACE RETURN SEMICOLON . rightbrace  (59)

	RIGHTBRACE  shift 54
	.  error

	rightbrace  goto 145


state 86
	derefID : DEREFERENCE id .  (89)

	.  reduce 89


state 87
	block_statements : LEFTBRACE newline . rightbrace  (107)

	RIGHTBRACE  shift 54
	.  error

	rightbrace  goto 146


state 88
	procIDValue : varType id .  (11)
	ASSIGNMENT_statement : id . ASSIGNMENT expr  (125)
	str_ASSIGNMENT_statement : id . LEFTBRACKET numbers RIGHTBRACKET ASSIGNMENT strings  (127)
	StringDeclare : id . LEFTBRACKET numbers RIGHTBRACKET COMMA StringDeclare  (135)
	StringDeclare : id . LEFTBRACKET numbers RIGHTBRACKET  (137)
	variablesDeclare : id . COMMA variablesDeclare  (139)
	variablesDeclare : id .  (141)

	ASSIGNMENT  shift 93
	COMMA  shift 147
	LEFTBRACKET  shift 148
	SEMICOLON  reduce 141
	LEFTPAREN  reduce 11


state 89
	variablesDeclare : ASSIGNMENT_statement . COMMA variablesDeclare  (140)
	variablesDeclare : ASSIGNMENT_statement .  (142)

	COMMA  shift 149
	SEMICOLON  reduce 142


state 90
	StringDeclare : str_ASSIGNMENT_statement . COMMA StringDeclare  (136)
	StringDeclare : str_ASSIGNMENT_statement .  (138)

	COMMA  shift 150
	SEMICOLON  reduce 138


state 91
	variable_declare_statements : varType StringDeclare .  (144)

	.  reduce 144


state 92
	variable_declare_statements : varType variablesDeclare .  (143)

	.  reduce 143


state 93
	ASSIGNMENT_statement : id ASSIGNMENT . expr  (125)

	ID  shift 24
	BOOLTRUE  shift 104
	BOOLFALSE  shift 105
	CSNULL  shift 106
	INTEGER_POS  shift 107
	INTEGER_NEG  shift 108
	CHAR_CONST  shift 109
	STRING_CONST  shift 110
	HEX_CONST  shift 111
	OCTAL_CONST  shift 112
	BINARY_CONST  shift 113
	NOT  shift 114
	ADDRESS  shift 115
	DEREFERENCE  shift 51
	ABSOLUTE  shift 116
	LEFTPAREN  shift 117
	.  error

	id  goto 118
	operator  goto 119
	Pexpr  goto 120
	address  goto 121
	derefID  goto 122
	consts  goto 123
	compBoolExpr  goto 124
	expr  goto 151
	numbers  goto 126
	booleans  goto 127
	csnull  goto 128
	strings  goto 129
	chars  goto 130
	procCall  goto 131
	absolute  goto 132
	stringArray  goto 133


state 94
	procCall : id LEFTPAREN . args RIGHTPAREN  (82)

	ID  shift 24
	BOOLTRUE  shift 104
	BOOLFALSE  shift 105
	CSNULL  shift 106
	INTEGER_POS  shift 107
	INTEGER_NEG  shift 108
	CHAR_CONST  shift 109
	STRING_CONST  shift 110
	HEX_CONST  shift 111
	OCTAL_CONST  shift 112
	BINARY_CONST  shift 113
	NOT  shift 114
	ADDRESS  shift 115
	DEREFERENCE  shift 51
	ABSOLUTE  shift 116
	LEFTPAREN  shift 117
	.  error

	id  goto 118
	operator  goto 119
	Pexpr  goto 120
	address  goto 121
	derefID  goto 122
	consts  goto 123
	compBoolExpr  goto 124
	expr  goto 152
	numbers  goto 126
	booleans  goto 127
	csnull  goto 128
	strings  goto 129
	chars  goto 130
	procCall  goto 131
	absolute  goto 132
	stringArray  goto 133
	args  goto 153
	argsDeclare  goto 154


state 95
	ASSIGNMENT_statement : derefID ASSIGNMENT . expr  (126)

	ID  shift 24
	BOOLTRUE  shift 104
	BOOLFALSE  shift 105
	CSNULL  shift 106
	INTEGER_POS  shift 107
	INTEGER_NEG  shift 108
	CHAR_CONST  shift 109
	STRING_CONST  shift 110
	HEX_CONST  shift 111
	OCTAL_CONST  shift 112
	BINARY_CONST  shift 113
	NOT  shift 114
	ADDRESS  shift 115
	DEREFERENCE  shift 51
	ABSOLUTE  shift 116
	LEFTPAREN  shift 117
	.  error

	id  goto 118
	operator  goto 119
	Pexpr  goto 120
	address  goto 121
	derefID  goto 122
	consts  goto 123
	compBoolExpr  goto 124
	expr  goto 155
	numbers  goto 126
	booleans  goto 127
	csnull  goto 128
	strings  goto 129
	chars  goto 130
	procCall  goto 131
	absolute  goto 132
	stringArray  goto 133


state 96
	block_return_void_statements : LEFTBRACE newline RETURN . SEMICOLON rightbrace  (54)

	SEMICOLON  shift 156
	.  error


state 97
	block_return_void_statements : LEFTBRACE newline rightbrace .  (55)

	.  reduce 55


state 98
	statement : procCall SEMICOLON .  (102)

	.  reduce 102


state 99
	newline : declarations newline .  (90)

	.  reduce 90


state 100
	declarations : variable_declare_statements SEMICOLON .  (94)

	.  reduce 94


state 101
	statements : statement statements .  (95)

	.  reduce 95


state 102
	statements : block_statements statements .  (97)

	.  reduce 97


state 103
	statement : ASSIGNMENT_statement SEMICOLON .  (103)

	.  reduce 103

